Getting adder from hard macros working.

--- a/dse/BUILD
+++ b/dse/BUILD
@@ -2,26 +2,18 @@
 
 load("//bazel:verilog.bzl", "generate_verilog_rule")
 load("//bazel/flow:defs.bzl",
-    "librelane_pdk",
-    "librelane_synthesis",
-    "librelane_floorplan",
-    "librelane_io_placement",
-    "librelane_global_placement",
-    "librelane_detailed_placement",
-    "librelane_cts",
-    "librelane_global_routing",
-    "librelane_detailed_routing",
-    "librelane_sta_mid_pnr",
+    "librelane_full_flow",
+    "librelane_hard_macro",
 )
+load("@sky130_fd_sc_hd_config//:defs.bzl", "pdk")
 
-# PDK
-librelane_pdk(
-    name = "sky130hd",
-    pdk_name = "sky130A",
-    scl = "sky130_fd_sc_hd",
-)
+# PDK (loaded from generated repository)
+pdk(name = "sky130hd")
 
-# Generate Verilog from Chisel
+# ============================================================================
+# Simple Adder (default configuration) - full flow with hard macro outputs
+# ============================================================================
+
 generate_verilog_rule(
     name = "Adder_default_verilog",
     generator_tool = "//src/main/scala/hwexample:adder",
@@ -29,54 +21,65 @@ generate_verilog_rule(
     config = "//configs:adder_default.json",
 )
 
-# Flow
-librelane_synthesis(
-    name = "Adder_synth",
+librelane_hard_macro(
+    name = "Adder",
     verilog_files = [":Adder_default_verilog"],
     top = "Adder_default_verilog",
     pdk = ":sky130hd",
+)
+
+# ============================================================================
+# Hard macros for hierarchical design
+# ============================================================================
+
+generate_verilog_rule(
+    name = "Adder32_verilog",
+    generator_tool = "//src/main/scala/hwexample:adder",
+    top = "Adder",
+    config = "//configs:adder32.json",
+)
+
+librelane_hard_macro(
+    name = "Adder32",
+    verilog_files = [":Adder32_verilog"],
+    top = "Adder32_verilog",
+    pdk = ":sky130hd",
+)
+
+generate_verilog_rule(
+    name = "Adder33_verilog",
+    generator_tool = "//src/main/scala/hwexample:adder",
+    top = "Adder",
+    config = "//configs:adder33.json",
+)
+
+librelane_hard_macro(
+    name = "Adder33",
+    verilog_files = [":Adder33_verilog"],
+    top = "Adder33_verilog",
+    pdk = ":sky130hd",
+)
+
+# ============================================================================
+# FourInputAdder - hierarchical design using hard macros
+# ============================================================================
+
+generate_verilog_rule(
+    name = "FourInputAdder_verilog",
+    generator_tool = "//src/main/scala/hwexample:four_input_adder",
+    top = "FourInputAdder",
+    config = "//configs:four_input_adder.json",
+)
+
+librelane_full_flow(
+    name = "FourInputAdder",
+    verilog_files = [":FourInputAdder_verilog"],
+    top = "FourInputAdder_verilog",
+    pdk = ":sky130hd",
     clock_period = "10.0",
-    clock_port = "clock",
-)
-
-librelane_floorplan(
-    name = "Adder_floorplan",
-    src = ":Adder_synth",
-    core_utilization = "40",
-)
-
-librelane_io_placement(
-    name = "Adder_io",
-    src = ":Adder_floorplan",
-)
-
-librelane_global_placement(
-    name = "Adder_gpl",
-    src = ":Adder_io",
-    target_density = "0.5",
-)
-
-librelane_detailed_placement(
-    name = "Adder_dpl",
-    src = ":Adder_gpl",
-)
-
-librelane_cts(
-    name = "Adder_cts",
-    src = ":Adder_dpl",
-)
-
-librelane_global_routing(
-    name = "Adder_grt",
-    src = ":Adder_cts",
-)
-
-librelane_detailed_routing(
-    name = "Adder_drt",
-    src = ":Adder_grt",
-)
-
-librelane_sta_mid_pnr(
-    name = "Adder_sta",
-    src = ":Adder_drt",
+    core_utilization = "20",
+    macros = [
+        ":Adder32_lef",
+        ":Adder33_lef",
+    ],
 )
